# xpaf

./: CONTRIBUTORS  Makefile.am  README.md  autogen.sh  configure.ac
chrome/: .gitignore  .jshintrc  Makefile  background.html  background.js  bar.css  bar.html  bar.js  content.css  content.js  manifest.json  package.json
chrome/gallery/: description.txt
chrome/images/: index.html  index.js
doc/: faq.html  faq.md  index.html  index.md  prettify.js  tutorial.html  tutorial.js  tutorial.md  xpaf.css
src/: document.h  parse_tool.cc  parsed_document.proto  post_processing_ops.proto  query_runner.cc  query_runner.h  util.cc  util.h  xpaf_parser.cc  xpaf_parser.h  xpaf_parser_def.proto  xpaf_parser_master.cc  xpaf_parser_master.h  xpath_wrapper.cc  xpath_wrapper.h
src/base/: benchmark.cc  benchmark.h  callback.h  commandlineflags.h  file.cc  file.h  integral_types.h  logging.h  macros.h  scoped_ptr.h  stl_decl.h  stl_util.h  stringpiece.cc  stringpiece.h  strutil.cc  strutil.h  url.h  webutil.cc  webutil.h
src/testing/: fetch_http.sh  gen_out_files.sh  gtest_main.cc  init_test.cc  parse_test.cc  re2_strstr_bm.cc  xpaf_bm.cc
src/testing/init_test_data/: duplicate_entity_name.xpd  empty_fields.xpd  invalid_query_name.xpd  invalid_reference.xpd  post_processing_ops.xpd
src/testing/parse_test_data/: annotations.http  annotations.out  annotations.xpd  chained_pp_ops.http  chained_pp_ops.out  chained_pp_ops.xpd  document_filters.http  document_filters.out  document_filters.xpd  extract_op.http  extract_op.out  extract_op.xpd  query_group_def.http  query_group_def.out  query_group_def.xpd  relation_filters.http  relation_filters.out  relation_filters.xpd  relation_userdata.http  relation_userdata.out  relation_userdata.xpd  replace_op.http  replace_op.out  replace_op.xpd  simple.http  simple.out  simple.xpd  value_of_element_node.http  value_of_element_node.out  value_of_element_node.xpd  xpath_support.http  xpath_support.out  xpath_support.xpd  zero_values.http  zero_values.out  zero_values.xpd
src/testing/xpaf_bm_data/: twitter.xpd  twitter_billgates.http
